[package]
name = "bakeoff-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
#chrono = { version = "0.4.19", features = ["serde"] }
# diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono"] }
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
env_logger = "0.9.1"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
